[tool.poetry]
name = "test"
version = "0.1.0"
description = "start of employment"
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
ipython = "^8.27.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
